<resources>
    <string name="app_name">MyMacros</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log in</string>
    <string name="or_sign_in_nwith">or Sign in\nwith</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_message">MyMacros will help you keep track of your calories, food habits and macros! With the help of this app you will be able to note down your meals, know how many proteins and other macros you need to consume in a day and many more!</string>
    <string name="welcome_user">Welcome georgeifa,</string>
    <string name="fill_the_quiz">Please fill up the quiz below, so we can help you more:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="lose_nweight">Lose\nWeight</string>
    <string name="maintain_nweight">Maintain\nWeight</string>
    <string name="gain_nweight">Gain\nWeight</string>
    <string name="diary">Diary</string>
    <string name="stats">Stats</string>
    <string name="goals">Goals</string>
    <string name="account">Account</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="high_n_5_per_week">High\n~5 per week</string>
    <string name="moderate_n_3_per_week">Moderate\n~3 per week</string>
    <string name="no_exercise_n0_per_week">No Exercise\n0 per week</string>
    <string name="age">Age</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="notifications_on">Notifications On</string>
    <string name="notifications_off">Notifications Off</string>
    <string name="notifications_are_enabled">Notifications are enabled!</string>
    <string name="english">English</string>
    <string name="greek">Greek</string>
    <string name="settings">Settings</string>
    <string name="weight_diary">Weight:</string>
    <string name="height_diary">Height:</string>
    <string name="_0">0</string>
    <string name="kg">KG</string>
    <string name="cm">CM</string>
    <string name="recommended">Recommended:</string>
    <string name="_60">60</string>
    <string name="add_lunch">Add Lunch</string>
    <string name="kcal">kcal</string>
    <string name="_1000">1000</string>
    <string name="add_breakfast">Add Breakfast</string>
    <string name="add_dinner">Add Dinner</string>
    <string name="add_snacks">Add Snacks</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="min">min</string>
    <string name="today">TODAY</string>
    <string name="_1260">1260</string>
    <string name="kcal_left">KCAL LEFT</string>
    <string name="eaten">EATEN</string>
    <string name="burnt">BURNT</string>
    <string name="protein">PROTEIN</string>
    <string name="carbs">CARBS</string>
    <string name="fat">FAT</string>
    <string name="_180">180</string>
    <string name="gr">gr</string>
    <string name="lunch">Lunch</string>
    <string name="protein_small">Protein</string>
    <string name="carbs_small">Carbs</string>
    <string name="fat_small">Fat</string>
    <string name="daily_intake">Daily Intake</string>
    <string name="search_food">Search Food</string>
    <string name="recommended_add">Recommended</string>
    <string name="your_list">Your List</string>
    <string name="search_exc">Search Exercise</string>
    <string name="exercise_title">Exercise</string>
    <string name="daily_burnt">Daily Burnt</string>
    <string name="reps">reps</string>
    <string name="calories">Calories</string>
    <string name="overview">Overview</string>
    <string name="_3_months">3-Months</string>
    <string name="_1_month">1-Month</string>
    <string name="week">Week</string>
    <string name="macros">Macros</string>
    <string name="_200">200</string>
    <string name="write_your_goal">Write your goal…</string>
    <string name="add">Add</string>
    <string name="add_new_goal">Add New Goal</string>
    <string name="confirm">Confirm</string>
    <string name="food_title">Food Title</string>
    <string name="add_new_food">Add New Food</string>
    <string name="calories_per_10_reps">Calories Per 10 Reps</string>
    <string name="biceps">Biceps</string>
    <string name="_50">50</string>
    <string name="exercise_titlev2">Exercise Title</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="calories_per_100g">Calories per 100g</string>
    <string name="welcome">Welcome</string>
    <string name="user">User</string>
    <string name="please_enter_your_password_below_or_press_the_button_from_fingertip_authentication">Please enter your password below or press the button from fingertip authentication:</string>
    <string name="re_authentication_required">Re-Authentication Required</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="steps_done">Steps Done</string>
    <string name="steps_tracking_is_enabled">Steps Tracking is enabled!</string>
    <string name="steps_tracking">Steps Tracking</string>
    <string name="log_out">Log out</string>
    <string name="map">Map</string>
    <string name="distance_done">Distance Done</string>
    <string name="km">km</string>
    <string name="time_passed">Time Passed</string>
    <string name="_00_00">00:00</string>
    <string name="calories_burnt">Calories Burnt</string>
    <string name="pace">Pace</string>
    <string name="km_h">km/h</string>
    <string name="start">Start</string>
    <string name="your_goals_amp_achievements"><![CDATA[Your Goals & Achievements]]></string>
    <string name="search_goals">Search Goals</string>
    <string name="goals_achieved">Goals Achieved</string>
    <string name="goals_achievements">Goals / Achievements</string>
    <string name="you_haven_t_added_any_goals_yet">You haven\'t added any goals yet!</string>
    <string name="p">P:</string>
    <string name="c">C:</string>
    <string name="f">F:</string>
    <string name="amount_in_grams">Amount in grams</string>
    <string name="food_list">Food List</string>
    <string name="no_foods_found">No Foods Found</string>
    <string name="exercise_list">Exercise List</string>
    <string name="no_exercise_found">No exercise found</string>
    <string name="reps_v2">Reps</string>
    <string name="sets">Sets</string>
    <string name="category">Category</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="unlock_with_your_fingerprint">Unlock with your fingerprint</string>
    <string name="or_use_passcode">or Use Passcode</string>
    <string name="enter_your_passcode">Enter your Passcode</string>
    <string name="or_use_fingerprint">or Use Fingerprint</string>
    <string name="this_will_lock">This will automatically lock the application when is put in the background.</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="press_the_finger">Press the fingertip to enable unlocking with you finger too:</string>
    <string name="app_lock_register">App Lock Register!</string>
    <string name="app_lock">App Lock</string>
    <string name="app_lock_is_enabled">App Lock Is Enabled</string>
    <string name="disable_app_lock">Disable App Lock?</string>
    <string name="are_you_sure_you_want_to_disable_app_lock">Are you sure you want to disable App Lock?</string>
    <string name="personal_details">Personal Details</string>
    <string name="account_details">Account Details</string>
    <string name="finger_unavail">Fingerprint is not available.\nPlease use passcode.</string>
    <string name="press_to_verify_with_touch_id">Press to verify with Touch ID.</string>
    <string name="welcome_to_mymacros">Welcome To\nMyMacros</string>
    <string name="unable_load_exe_list">Unable to Load Exercise List</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_mic_denied">Permission to use the microphone has been denied.</string>
    <string name="ready_to_speak">Ready to speak!</string>
    <string name="listening">Listening…</string>
    <string name="unable_load_food">Unable to Load Food List</string>
    <string name="passcode_must_be">Passcode Must Be a 4-digit number!</string>
    <string name="authentication_error">Authentication error: </string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="verify_with_your_finger">Verify with your fingerprint:</string>
    <string name="use_passcode">Use passcode</string>
    <string name="press_back_again_to_exit">Press Back Again to Exit.</string>
    <string name="first_name_empty">First Name Cannot Be Empty!</string>
    <string name="last_name_empty">Last Name Cannot Be Empty!</string>
    <string name="age_empty">Age Cannot Be Empty!</string>
    <string name="weight_empty">Weight Cannot Be Empty!</string>
    <string name="height_empty">Height Cannot Be Empty!</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="exercise">Exercise</string>
    <string name="goal_deleted">Goal Deleted</string>
    <string name="goal_achieved">Goal Achieved! Congratulations!!</string>
    <string name="exe_title_empty">Exercise title is empty</string>
    <string name="calories_burnt_empty">Calories burnt is empty</string>
    <string name="exe_name_exists">Exercise with this name already exists</string>
    <string name="food_name_exists">Food with this name already exists</string>
    <string name="food_title_empty">Food title is empty</string>
    <string name="food_calories_empty">Food calories is empty</string>
    <string name="food_prot_empty">Food proteins is empty</string>
    <string name="food_carbs_empty">Food carbs is empty</string>
    <string name="food_fats_empty">Food fats is empty</string>
    <string name="add_to_your_list">Added To Your List</string>
    <string name="failed_to_add_to_your_list">Failed To Add To Your List</string>
    <string name="goal_added_successfully">Goal Added Successfully!</string>
    <string name="password_updated">Password updated</string>
    <string name="new_password_is_not_valid">New Password is not Valid</string>
    <string name="email_updated">Email updated</string>
    <string name="new_email_is_not_valid">New Email is not Valid</string>
    <string name="reset_link_not_sent">Cancelled! Reset link not sent</string>
    <string name="reset_link_sent">Reset Link has been sent to your Email.</string>
    <string name="check_your_email_and_try_again">Failed! Something went wrong, check the email and try again!</string>
    <string name="username_empty">Username Cannot Be Empty</string>
    <string name="email_empty">Email Cannot Be Empty</string>
    <string name="this_page_require_gps">This page requires access to your location and activity recognition to work properly.\nPlease re-enter the page to grant permission or change through your phone settings.</string>
    <string name="gps_seem_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="make_sure_good_gps_signal">Make sure you have a good GPS signal!</string>
    <string name="stop">Stop</string>
    <string name="per"> per </string>
    <string name="macro_ratio">Macronutrient Ratio</string>
    <string name="dont_forget">Don\'t Forget</string>
</resources>