<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="170dp"
    android:layout_height="170dp"
    android:background="@drawable/general_frame_bg"
    android:layout_marginEnd="8dp">

    <TextView
        android:id="@+id/title_view_food_TXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/food_title"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_view_food_TXT">

        <TextView
            android:id="@+id/calories_view_food_TXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/_1260"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/kcal"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_marginHorizontal="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/p"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/prot_view_food_TXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/_180"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_bold"
            android:maxLines="1"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/carbs_view_food_TXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"

            android:ellipsize="end"
            android:fontFamily="@font/nunito_bold"
            android:maxLines="1"
            android:text="@string/_60"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_bold"
            android:maxLines="1"
            android:text="@string/f"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fat_view_food_TXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_bold"
            android:maxLines="1"
            android:text="@string/_50"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/add_view_food_BTN"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_add_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>