<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth="350dp"
    android:background="@drawable/general_frame_bg">

    <TextView
        android:id="@+id/title_user_exe_dialog_TXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/exercise_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_user_exe_dialog_TXT">

        <EditText
            android:id="@+id/reps_user_exe_dialog_ETXT"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_style"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/reps_v2"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingVertical="5dp"
            android:paddingHorizontal="8dp"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#C6CCC6"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/sets_user_exe_dialog_ETXT"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/sets"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingVertical="5dp"
            android:paddingHorizontal="8dp"
            android:gravity="center"
            android:layout_marginStart="16dp"

            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#C6CCC6"
            android:textSize="21sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

    <TextView
        android:id="@+id/cat_user_exe_dialog_ETXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/biceps"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview40" />

    <TextView
        android:id="@+id/textview39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/calories_burnt"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_user_exe_dialog_ETXT" />

    <TextView
        android:id="@+id/calories_user_exe_dialog_TXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview39" />


    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_user_exe_dialog_TXT">

        <TextView
            android:id="@+id/add_user_exe_dialog_BTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/enabled_disabled_color_selector"
            android:enabled="false"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/add"
            android:textColor="@drawable/text_color_selector"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/cancel_user_exe_dialog_BTN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_idle_bg_red_style"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="25sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>